fix(infra): Resolve AWS SDK version conflicts and enhance CodeBuild workflow
- Add AWS SDK BOM import to resolve dependency conflicts between AgentCore Memory 2.1.0 and Spring AI 2.0.1
- Introduce DynamoDB table to persist CloudFormation callback state during CodeBuild execution
- Refactor CodeBuild Lambda functions to use DynamoDB for tracking pending builds and coordinating responses
- Update EventBridge rule to capture additional CodeBuild terminal states (FAULT, TIMED_OUT)
- Replace Arrays with List for consistency in EventBridge event patterns
- Fix EC2 network interface deletion policy to use wildcard resource instead of specific ARN
- Add CDK Nag suppression for DynamoDB point-in-time recovery requirement
- Add explicit construct dependencies to ensure proper deployment ordering
- Remove unused CodeBuildIamRoleArn property from custom resource
- Simplify Lambda function environment variable management through table grants
- Update demo script to handle AWS SDK version coherence for Java Spring AI agents